--- a/index.html
+++ b/index.html
@@ -14,13 +14,43 @@
 </head>
 
 <body>
-    <h1>>Hello world</h1>
+    <div class="vh-100 vw-100" id="content">
+        <h1>>Hello world</h1>
+        <div class="d-flex mx-auto flex-wrap align-items-stretch" id="cardGame">
+            <div class="pokeCard">
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png"
+                    class="pokeImg">
+                <img src="https://velvety-mousse-38f1cf.netlify.app/back.webp" class="pokeBack">
+            </div>
 
-    <div class="d-flex" id="cardGame">
-        <div class="card">
-            Potato
+            <div class="pokeCard">
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png"
+                    class="pokeImg">
+                <img src="https://velvety-mousse-38f1cf.netlify.app/back.webp" class="pokeBack">
+            </div>
+
+            <div class="pokeCard">
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png"
+                    class="pokeImg">
+                <img src="https://velvety-mousse-38f1cf.netlify.app/back.webp" class="pokeBack">
+            </div>
+
+            <div class="pokeCard">
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png"
+                    class="pokeImg">
+                <img src="https://velvety-mousse-38f1cf.netlify.app/back.webp" class="pokeBack">
+            </div>
+
+            <div class="pokeCard">
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png"
+                    class="pokeImg">
+                <img src="https://velvety-mousse-38f1cf.netlify.app/back.webp" class="pokeBack">
+            </div>
         </div>
     </div>
+
+
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
