--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
             </div>
 
             <div class="pokeCard">
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/172.png"
+                    class="pokeImg">
+                <img src="https://velvety-mousse-38f1cf.netlify.app/back.webp" class="pokeBack">
+            </div>
+
+            <div class="pokeCard">
                 <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png"
                     class="pokeImg">
                 <img src="https://velvety-mousse-38f1cf.netlify.app/back.webp" class="pokeBack">
