--- a/index.html
+++ b/index.html
@@ -14,8 +14,17 @@
 </head>
 
 <body>
-    <div class="vh-100 vw-100" id="content">
-        <h1>>Hello world</h1>
+    <div class="vh-100 vw-100 d-flex flex-column" id="content">
+        <div class="btn-group btn-group-toggle m-3 w-25 mx-auto">
+            <button class="btn btn-primary difficulty">Easy</button>
+            <button class="btn btn-primary difficulty">Medium</button>
+            <button class="btn btn-primary difficulty">Hard</button>
+        </div>
+
+        <div class="mx-auto">
+            <button class="me-1 btn btn-primary">Reset </button>
+            <button class="btn btn-primary">Start</button>
+        </div>
         <div class="d-flex mx-auto flex-wrap align-items-stretch" id="cardGame">
             <div class="pokeCard">
                 <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/172.png"
