--- a/index.html
+++ b/index.html
@@ -22,10 +22,18 @@
         </div>
 
         <div class="mx-auto">
-            <button class="me-1 btn btn-primary">Reset </button>
-            <button class="btn btn-primary">Start</button>
+            <button class="me-1 btn btn-primary" id="reset">Reset </button>
+            <button class="btn btn-primary" id="start">Start</button>
         </div>
-        <div class="d-flex mx-auto flex-wrap align-items-stretch" id="cardGame">
+
+        <div id="gameInfo" class="mt-2 d-flex justify-content-center">
+            <div>
+                <h3 id="time"></h3>
+            </div>
+        </div>
+
+        <div class="d-flex mx-auto flex-wrap align-items-stretch d-none border mt-5 align-content-center justify-content-center"
+            id="cardGame">
             <div class="pokeCard">
                 <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/172.png"
                     class="pokeImg">
