Implement winning alert

--- a/index.html
+++ b/index.html
@@ -26,9 +26,21 @@
             <button class="btn btn-primary" id="start">Start</button>
         </div>
 
-        <div id="gameInfo" class="mt-2 d-flex justify-content-center">
+        <div id="gameInfo" class="mt-2 d-flex justify-content-center flex-column text-center">
             <div>
-                <h3 id="time"></h3>
+                <h3 id="pairs">Total number of Pairs:</h3>
+            </div>
+            <div>
+                <h3>Total number of Matches:</h3>
+            </div>
+            <div>
+                <h3>Number of pairs left:</h3>
+            </div>
+            <div>
+                <h3>Number of clicks</h3>
+            </div>
+            <div>
+                <h3 id="time">Time:</h3>
             </div>
         </div>
 
