Populate cards with pairs of random pokemon

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h3>Number of pairs left:</h3>
             </div>
             <div>
-                <h3>Number of clicks</h3>
+                <h3 id="totalClicks">Number of clicks</h3>
             </div>
             <div>
                 <h3 id="time">Time:</h3>
