--- a/index.html
+++ b/index.html
@@ -14,82 +14,51 @@
 </head>
 
 <body>
-    <div class="vh-100 vw-100 d-flex flex-column" id="content">
-        <div class="btn-group btn-group-toggle m-3 w-25 mx-auto">
-            <button class="btn btn-primary difficulty">Easy</button>
-            <button class="btn btn-primary difficulty">Medium</button>
-            <button class="btn btn-primary difficulty">Hard</button>
+    <div class="vw-100 d-flex flex-column justify-content-start" id="content" style="height: auto;"">
+        <div class=" btn-group btn-group-toggle m-3 w-25 mx-auto">
+        <button class="btn btn-primary difficulty active focus" value="easy">Easy</button>
+        <button class="btn btn-primary difficulty" value="medium">Medium</button>
+        <button class="btn btn-primary difficulty" value="hard">Hard</button>
+    </div>
+
+    <div class="mx-auto">
+        <button class="me-1 btn btn-primary" id="reset">Reset </button>
+        <button class="btn btn-primary" id="start">Start</button>
+    </div>
+
+    <div id="gameInfo" class="mt-2 d-flex justify-content-center flex-column text-center mb-3 d-none">
+        <div>
+            <h3 id="pairs">Total number of Pairs:</h3>
         </div>
-
-        <div class="mx-auto">
-            <button class="me-1 btn btn-primary" id="reset">Reset </button>
-            <button class="btn btn-primary" id="start">Start</button>
+        <div>
+            <h3>Total number of Matches:</h3>
         </div>
-
-        <div id="gameInfo" class="mt-2 d-flex justify-content-center flex-column text-center">
-            <div>
-                <h3 id="pairs">Total number of Pairs:</h3>
-            </div>
-            <div>
-                <h3>Total number of Matches:</h3>
-            </div>
-            <div>
-                <h3>Number of pairs left:</h3>
-            </div>
-            <div>
-                <h3 id="totalClicks">Number of clicks</h3>
-            </div>
-            <div>
-                <h3 id="time">Time:</h3>
-            </div>
+        <div>
+            <h3>Number of pairs left:</h3>
         </div>
-
-        <div class="d-flex mx-auto flex-wrap align-items-stretch d-none border mt-5 align-content-center justify-content-center"
-            id="cardGame">
-            <div class="pokeCard">
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/172.png"
-                    class="pokeImg">
-                <img src="https://velvety-mousse-38f1cf.netlify.app/back.webp" class="pokeBack">
-            </div>
-
-            <div class="pokeCard">
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/172.png"
-                    class="pokeImg">
-                <img src="https://velvety-mousse-38f1cf.netlify.app/back.webp" class="pokeBack">
-            </div>
-
-            <div class="pokeCard">
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png"
-                    class="pokeImg">
-                <img src="https://velvety-mousse-38f1cf.netlify.app/back.webp" class="pokeBack">
-            </div>
-
-            <div class="pokeCard">
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png"
-                    class="pokeImg">
-                <img src="https://velvety-mousse-38f1cf.netlify.app/back.webp" class="pokeBack">
-            </div>
-
-            <div class="pokeCard">
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png"
-                    class="pokeImg">
-                <img src="https://velvety-mousse-38f1cf.netlify.app/back.webp" class="pokeBack">
-            </div>
-
-            <div class="pokeCard">
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png"
-                    class="pokeImg">
-                <img src="https://velvety-mousse-38f1cf.netlify.app/back.webp" class="pokeBack">
-            </div>
+        <div>
+            <h3 id="totalClicks">Number of clicks</h3>
         </div>
+        <div>
+            <h3 id="time">Time:</h3>
+        </div>
+    </div>
+
+    <div class="d-flex mx-auto flex-wrap align-items-stretch d-none border align-content-center justify-content-center"
+        id="cardGame">
+    </div>
+
+    </div>
+    <div style="height: 10vh;">
+
     </div>
 
 
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
+    <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
+        </script>
     <!-- JQuery JS -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"
         integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
