--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 
     <div id="gameInfo" class="mt-2 d-flex justify-content-center flex-column text-center mb-3 d-none">
         <div>
-            <h3 id="pairs">Total number of Pairs:</h3>
+            <h3 id="totalPairs">Total number of Pairs:</h3>
         </div>
         <div>
-            <h3>Total number of Matches:</h3>
+            <h3 id="totalMatches">Total number of Matches: 0</h3>
         </div>
         <div>
-            <h3>Number of pairs left:</h3>
+            <h3 id="pairsLeft">Number of pairs left:</h3>
         </div>
         <div>
-            <h3 id="totalClicks">Number of clicks</h3>
+            <h3 id="totalClicks">Number of clicks: 0</h3>
         </div>
         <div>
-            <h3 id="time">Time:</h3>
+            <h3 id="time"></h3>
         </div>
     </div>
 
