--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </div>
 
-        <div class="d-flex mx-auto flex-wrap align-items-stretch d-none border align-content-center justify-content-center bg-dark"
+        <div class="d-flex mx-auto flex-wrap align-items-stretch d-none border align-content-center justify-content-center"
             id="cardGame">
         </div>
 
