Add power up button event

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h3 id="time"></h3>
             </div>
         </div>
-
+        <button class="btn btn-danger border border-dark ms-1 d-none align-self-center" id="powerUp">? ? ?</button>
         <div class="d-flex mx-auto flex-wrap align-items-stretch d-none border align-content-center justify-content-center"
             id="cardGame">
         </div>
